--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "string-formatter": "^0.2.0"
   },
   "devDependencies": {
-    "chai": "^1.9.1",
+    "chai": "^3.0.0",
     "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.10.0"
+    "grunt-contrib-jshint": "^0.10.0",
+    "mocha": "^2.2.5"
   }
 }
