--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "algorithms",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Implementation of algorithms based on the books: Introduction to Algorithms, third edition http://mitpress.mit.edu/books/introduction-algorithms Algorithms, 4th Edition http://algs4.cs.princeton.edu/home/",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "typings": "typings install",
+    "tsc": "tsc",
+    "test": "mocha --compilers ts:ts-node/register test/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -28,14 +30,13 @@
   },
   "homepage": "https://github.com/RinatMullayanov/algorithms",
   "dependencies": {
-    "lodash": "^3.9.3",
-    "rsvp": "^3.0.13",
-    "string-formatter": "^0.2.0"
+    "lodash": "^4.16.4"
   },
   "devDependencies": {
-    "chai": "^3.0.0",
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.10.0",
-    "mocha": "^2.2.5"
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2",
+    "ts-node": "^1.4.3",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0"
   }
 }
