--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "test"
   },
   "scripts": {
-    "typings": "typings install",
     "tsc": "tsc",
     "tslint": "tslint *.ts lib/**/*.ts test/**/*.ts",
     "test": "mocha --compilers ts:ts-node/register test/**/*.ts",
@@ -36,12 +35,13 @@
     "lodash": "^4.16.4"
   },
   "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.33",
     "chai": "^3.5.0",
     "husky": "^0.11.9",
     "mocha": "^3.1.2",
     "ts-node": "^1.4.3",
     "tslint": "^3.15.1",
-    "typescript": "^2.0.3",
-    "typings": "^1.4.0"
+    "typescript": "^2.0.3"
   }
 }
